components/argo-system/kubechecks/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app kubechecks
  annotations:
    external-dns.kubernetes.io/target: "external.${CLUSTER_DOMAIN}"
spec:
  parentRefs:
    - name: ${GATEWAY_EXTERNAL}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["kubechecks.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: *app
          port: 8080
